--- a/package.json
+++ b/package.json
@@ -49,10 +49,11 @@
         "solhint": "^3.3.7",
         "solidity-coverage": "^0.7.20",
         "solidity-docgen": "^0.6.0-beta.7",
-        "truffle": "^5.5.5",
+        "truffle": "^5.4.3",
         "truffle-contract-size": "^2.0.1",
         "truffle-flattener": "^1.6.0",
         "truffle-plugin-verify": "^0.5.24",
+        "truffle-assertions": "^0.9.2",
         "ts-node": "^10.7.0",
         "typechain": "^7.0.1",
         "typescript": "^4.6.2"
