--- a/tsconfig.json
+++ b/tsconfig.json
@@ -68,6 +68,6 @@
       "skipLibCheck": true,                           /* Skip type checking of declaration files. */
       "forceConsistentCasingInFileNames": true        /* Disallow inconsistently-cased references to the same file. */
     },
-    "include": ["**/*.ts"],
+    "include": ["**/*.ts", "test/MagicToken.test.js"],
     "exclude": ["node_modules", "build", "cache", "artifacts"]
   }
